--- a/menup.html
+++ b/menup.html
@@ -8,12 +8,15 @@
   <a class="active" href="#/">OnlyGames</a>
   <a href="#">Noticias</a>
   <a href="#">Juegos</a>
+ 
   <div class = "container">
+	
         <form action="">
-            <input type="text" placeholder="Busca Tu Juego Favorito" name="browser">
+            <input type="text" placeholder="Busca Juegos {{nombre}}" name="browser">
                         
         </form>
   </div>
+  
 </nav>
 
 
